Update all Feature

--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -1,6 +1,7 @@
 environment=local
-browser=firefox
+browser=chrome
 windowMaximize=true
 implicitlyWait=15
 url=http://www.shop.demoqa.com
 testDataResourcePath=src/test/resources/testDataResources/
+driverPath=src/test/resources/driver/chromedriver.exe
