--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -1,7 +1,8 @@
-environment=local
+environment=remote
 browser=chrome
 windowMaximize=true
 implicitlyWait=15
-url=http://www.shop.demoqa.com
+url=https://www.facebook.com
 testDataResourcePath=src/test/resources/testDataResources/
-driverPath=src/test/resources/driver/chromedriver.exe
+driverPath=driver/chromedriver.exe
+reportConfigPath=configs/extent-config.xml
